# gmail-telegram-forwarder

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  crontab  docker-compose.yml  main.py  pyproject.toml  renovate.json  requirements.in.txt  requirements.txt  zizmor.yml
.github/workflows/: deploy.yaml  lint.yaml
gmail_telegram/: __init__.py  api.py  config.py  gmail_auth.py  gmail_read.py  storage.py  telegram.py
gmail_telegram/data/: success.html
infra/: .terraform.lock.hcl  backend_lambda.tf  cloudwatch.tf  cloudwatch_logs.tf  dynamodb.tf  ecr.tf  iam_deploy.tf  outputs.tf  providers.tf  secrets_manager.tf
