[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-requests>=2.32.0.20250328",
]

[project]
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.151.0",
    "google-auth-oauthlib>=1.2.1",
    "requests>=2.32.3",
    "pynamodb>=6.0.1",
    "fastapi>=0.115.4",
    "pydantic>=2.9.2",
    "mangum>=0.19.0",
    "awslambdaric>3.0",
    "boto3>=1.35.56",
]
description = "Forward incoming GMail emails to Telegram."
name = "gmail_telegram"
requires-python = ">=3.13"
version = "0.1.0"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
enable_error_code = [
    "possibly-undefined",
    'redundant-expr',
    'truthy-bool',
    'truthy-iterable',
    'ignore-without-code',
    'unused-awaitable',
]
ignore_missing_imports = true
no_implicit_optional = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
preview = true
target-version = 'py313'

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = [
    ".svn",
    "CVS",
    ".bzr",
    ".hg",
    ".git",
    "__pycache__",
    ".tox",
    ".nox",
    ".eggs",
    "*.egg",
    "migrations",
    "manage.py",
]
extend-ignore = [
    "EM101",  # Exception must not use a string literal, assign to variable first
    "EM102",  # Exception must not use an f-string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "TC003",  # Move standard library import `XXX` into a type-checking block
    "ANN",  # Type hints
    "D",  # Docstrings
    "TD",  # To-do comment lints
    "FIX",  # Line contains TODO/FIXME/HACK, consider resolving the issue
    "DOC",  # Docstrings
    "CPY",  # copyright
    "PLR6301",  # Method `xxx` could be a function, class method, or static method
    "E501",  # Let black care about line width, if not splitable - go on
    # conflicts with ruff-fmt
    "COM812",
    # conflicts with my personal opinion
    "RUF067",  # `__init__` module should only contain docstrings and re-exports
]
extend-safe-fixes = ["F401"]
select = ['ALL']
unfixable = ['ERA001']

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["gmail_telegram"]
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = false

[tool.uv]
compile-bytecode = true
link-mode = "copy"
